--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uber-clone",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "expo": "~51.0.21",
+    "expo-constants": "~16.0.2",
+    "expo-image-picker": "~15.0.7",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.4",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.4.6"
   },
   "private": true
 }
