--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uber-clone",
+  "name": "instagram-clone",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -21,7 +21,7 @@
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.72.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
     "react-native-reanimated": "~3.10.1",
@@ -29,7 +29,6 @@
     "react-native-screens": "3.31.1",
     "react-native-swiper-flatlist": "^3.2.4",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-video": "^6.4.2",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2"
   },
